# synthe

./: .gitignore  LICENSE  README.md  SYNTHE_PARADIGM.md  pyproject.toml  requirements.txt  why.md
configs/: synthe_60m.yaml
scripts/: train.py
src/: __init__.py
src/layers/: __init__.py  attention.py  base.py  delta.py  hopfield.py  jordan.py  kalman.py  momentum.py  turing.py  wiener.py
src/memory/: __init__.py  hub.py
src/model/: __init__.py  block.py  synthe.py
src/routing/: __init__.py  depth_router.py
tests/: __init__.py  test_layers.py  test_model.py  test_probe_fire.py
