[project]
name = "synthe"
version = "0.1.0"
description = "SYNTHE: Synthesis of Online Learning Primitives for Hierarchical Temporal Engines"
authors = [{ name = "Kael Valen" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "einops>=0.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark",
]
eval = [
    "lm-eval>=0.4.0",
    "datasets>=2.14.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]